Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36334

test main.func_format fails on i386 on exabyte/petabyte mismatch

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 11.8.1
    • 11.8.2
    • Server
    • None

    Description

      After uploading MariaDB 11.8.1 to Debian I noticed the official builders failed on test:

      main.func_format                         w2 [ fail ]
              Test ended at 2025-03-19 07:37:01
       
      CURRENT_TEST: main.func_format
      --- /build/reproducible-path/mariadb-11.8.1/mysql-test/main/func_format.result	2025-02-12 10:13:21.000000000 +0000
      +++ /build/reproducible-path/mariadb-11.8.1/mysql-test/main/func_format.reject	2025-03-19 07:37:00.872321601 +0000
      @@ -305,7 +305,7 @@
       ## 1024^6 Eib
       SELECT format_bytes(1152921504606846976-1);
       format_bytes(1152921504606846976-1)
      -1.00 EiB
      +1024.00 PiB
       
       SELECT format_bytes(1180591620717411434000);
       format_bytes(1180591620717411434000)
       
      Result length mismatch
      

      Full log at https://buildd.debian.org/status/fetch.php?pkg=mariadb&arch=i386&ver=1%3A11.8.1-1&stamp=1742370024&raw=0

      I have now seen this on Launchpad builders or Salsa CI builders before with the same code. It may be a result of some dependency that got updated in Debian unstable.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            otto Otto Kekäläinen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.25h
                1.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.