MDEV-36334 test main.func_format fails on i386 on exabyte/petabyte mismatch

snprintf below uses %4.2f. values above 1023.99 MiB should be shown
as 1.00 GiB not as 1024.00 MiB